[package]
name = "sabio_stuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_sbml = { git = "https://github.com/carrascomj/rust_sbml", branch = "enhance-sabio-comp", features=["sabiork"]}
argh = "0.1"

